--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,12 @@
 body{
-	background-color: hsl(0, 0%, 98%);
+	background-color: #fff;
 }
 
 h1,h2,h3,h4,h5,h6{
 	color:hsl(0, 0%, 30%);
 }
 
-.box-element{
+.box-element{   
 	box-shadow:hsl(0, 0%, 80%) 0 0 16px;
 	background-color: #fff;
 	border-radius: 4px;
@@ -20,7 +20,6 @@ h1,h2,h3,h4,h5,h6{
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
 }
-
 
 #cart-icon{
 	width:25px;
@@ -37,11 +36,6 @@ h1,h2,h3,h4,h5,h6{
 	height: 25px;
 	border-radius: 50%;
 	font-size: 14px;
-}
-
-.row{
-	margin-left: 30px;
-	margin-right: 30px;
 }
 
 .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
@@ -94,4 +88,17 @@ h1,h2,h3,h4,h5,h6{
 
 .hidden{
 	display: none!important;
+}
+
+
+.row-content{
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+@media (max-width: 768px) {
+    .row-content {
+        margin-left: 20px; /* Adjust the left margin for smaller screens */
+        margin-right: 20px; /* Adjust the right margin for smaller screens */
+    }
 }
