--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,22 +1,50 @@
 {% extends 'store/main.html' %}
+{% load static %}
 {% block content %}
 
-<div class="row">
+<div class="row row-content">
     <div class="col-lg-12">
         <div class="box-element">
             <a href="{% url 'store' %}" class="btn btn-outline-secondary">Continue Shopping</a>
             <hr>
             <table class="table">
                 <tr>
-                    <th><h4>Items:</h4><strong>1</strong></th>
-                    <th><h4>Total:</h4><strong>454</strong></th>
+                    <th><h4>Items:</h4><strong>{{order.get_number_of_cart_items}}</strong></th>
+                    <th><h4>Total:</h4><strong>{{order.get_cart_total}}</strong></th>
                     <th>
                         <a href="{% url 'checkout' %}" class="btn btn-success" style="float: right;">Checkout</a>
                     </th>
                 </tr>
             </table>
         </div>
-    </div>
+        <br>
+        <div class="box-element">
+            <div class="cart-row">
+                <div style="flex:2"></div>
+                <div style="flex:2"><strong>Item</strong></div>
+                <div style="flex:1"><strong>Price</strong></div>
+                <div style="flex:1"><strong>Quantity</strong></div>
+                <div style="flex:1"><strong>Total</strong></div>
+            </div>
+            <br>
+            {% for item in items %}
+            <div class="cart-row">
+                <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+                <div style="flex:2"><p>{{item.product.name}}</p></div>
+                <div style="flex:1"><p>{{item.product.price}}</p></div>
+                <div style="flex:1">
+                    <p class="quantity">{{item.quantity}}</p>
+                    <div class="quantity">
+                        <img class="chg-quantity" src="{% static 'images/arrow-up.png' %}">
+                
+                        <img class="chg-quantity" src="{% static 'images/arrow-down.png' %}">
+                    </div>
+                </div>
+                <div style="flex:1"><p>{{item.get_total}}</p></div>
+            </div>
+            {% endfor %}
+        </div>
+</div>
 </div>
 
 {% endblock %}
