--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -2,11 +2,10 @@
 {% load static %}
 {% block content %}
 
-
-    <div class="row">
+    <div class="row row-content">
         {% for item in products %}
         <div class="col-lg-4">
-            <img src="{{item.image.url}}" class="thumbnail" alt="">
+            <img src="{{item.imageURL}}" class="thumbnail" alt="">
             <div class="box-element">
                 <h3>{{item.name}}</h3>
                 <hr>
@@ -17,5 +16,4 @@
         </div>
         {% endfor %}
     </div>
-
 {% endblock %}
