--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,5 +1,68 @@
 {% extends 'store/main.html' %}
 
 {% block content %}
-checkout
+
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="box-element">
+                <form action="">
+                    <div class="user-info">
+                        <div class="form-field">
+                            <input type="text" placeholder="Name">
+                        </div>
+                        <div class="form-field">
+                            <input type="text" placeholder="Email" id="">
+                        </div>
+                    </div>
+                    <div class="shipping-info">
+                        <hr>
+                        <p>Shipping Information:</p>
+                        <hr>
+                        <div class="form-field">
+                            <input class="form-control" type="text" name="address" placeholder="Address..">
+                        </div>
+                        <div class="form-field">
+                            <input class="form-control" type="text" name="city" placeholder="City..">
+                        </div>
+                        <div class="form-field">
+                            <input class="form-control" type="text" name="state" placeholder="State..">
+                        </div>
+                        <div class="form-field">
+                            <input class="form-control" type="text" name="zipcode" placeholder="Zip code..">
+                        </div>
+                    </div>
+                    <hr>
+                    <input type="submit" value="Continue" class="btn btn-success btn-block">
+                </form>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="box-element">
+                <a href="{% url 'cart' %}" class="btn btn-outline-secondary">Back to Cart</a>
+                <hr>
+                <h4>Order Summary</h4>
+                <hr>
+                <div class="cart-row">
+                    <div style="flex:2"></div>
+                    <div style="flex:2"><strong>Item</strong></div>
+                    <div style="flex:1"><strong>Price</strong></div>
+                    <div style="flex:1"><strong>Quantity</strong></div>
+                    <div style="flex:1"><strong>Total</strong></div>
+                </div>
+                <br>
+                {% for item in items %}
+                <div class="cart-row">
+                    <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
+                    <div style="flex:2"><p>{{item.product.name}}</p></div>
+                    <div style="flex:1"><p>{{item.product.price}}</p></div>
+                    <div style="flex:1">
+                        <p class="quantity">{{item.quantity}}</p>       
+                    </div>
+                    <div style="flex:1"><p>{{item.get_total}}</p></div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
