--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -22,7 +22,12 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-                <button class="btn btn-outline-success" type="submit">Login</button>
+                {% if request.user.is_authenticated %}
+                  <a class="btn btn-outline-success" href="{% url 'logout' %}">Logout</a>
+                {% else %}
+                  <a class="btn btn-outline-success" href="{% url 'login' %}">Login</a>
+                  <a class="btn btn-outline-success" href="{% url 'register' %}">Register</a>
+                  {% endif %}
                 <a href="{% url 'cart' %}"><img src="{% static 'images/Cart.png' %}" id="cart-icon"></a>
                 
             </form>
